--- a/Index.html
+++ b/Index.html
@@ -6,18 +6,16 @@
     <title>Too Much Catnip</title>
 </head>
 <body>
-    <p>
-    There was a Ginger Cat who, despite all odds, was serving as gunner on a spaceship headed to Mars.
+    <h1> Too Much Catnip </h1>
+    <p><font color="orange">There was a Ginger Cat </font> who, despite all odds, was serving as gunner on a spaceship headed to Mars.
 An alien is on the horizon, but the gunner knowns what needs to be done...
 And so he put down his gun, for there was nothing he could say; he then meowed so loudly the neighbor woke up.
 </p>
-<p>
-The neighbor shot a bolt of superheated plasma at him, which was nimbly dodged.
+<p>The neighbor shot a bolt of <font color="blue"> superheated plasma </font>at him, which was nimbly dodged.
 "Darn that was really close", the Neighbor says, dissapointed at the missed shot..
 Until it hits a wall behind it, causing it to topple over. He crys for his dog friend to help him up - 
 </p>
-<p>
-But they pull out a gun, uttering the iconic opening line from Fallout: New Vegas, pointing it at their "friend".
+<p>But they pull out a gun, uttering the iconic opening line from Fallout: New Vegas, pointing it at their "friend".
 "Bazinga!" they say, gun in hand. The enemy is utterly confused - so much so that it is still and unmoving.
 As confused as the enemy is, the narrator and everyone else is even more confused.
 </p>
