--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@ And so he put down his gun, for there was nothing he could say; he then meowed s
 Until it hits a wall behind it, causing it to topple over. He crys for his dog friend to help him up - 
 </p>
 <p>But they pull out a gun, uttering the iconic opening line from Fallout: New Vegas, pointing it at their "friend".
-"Bazinga!" they say, gun in hand. The enemy is utterly confused - so much so that it is still and unmoving.
+<h2>"Bazinga!"</h2> they say, gun in hand. The enemy is utterly confused - so much so that it is still and unmoving.
 As confused as the enemy is, the narrator and everyone else is even more confused.
 </p>
 </body>
