--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1> Too Much Catnip </h1>
     <img src="https://cdn.britannica.com/70/234870-050-D4D024BB/Orange-colored-cat-yawns-displaying-teeth.jpg" alt="ginger1" width="500" height="333">
-    <div>
+    <div id="first-div">
         <p><font color="orange">There was a Ginger Cat </font> who, despite all odds, was serving as gunner on a spaceship headed to Mars.
     An alien is on the horizon, but the gunner knowns what needs to be done...
     And so he put down his gun, for there was nothing he could say; he then meowed so loudly the neighbor woke up.
