--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 "Darn that was really close", the Neighbor says, dissapointed at the missed shot..
 Until it hits a wall behind it, causing it to topple over. He crys for his dog friend to help him up - 
 </p>
+<!-- image broken, look into fixing-->
 <img src="https://static.wikia.nocookie.net/doom/images/6/64/640cf14229f64d0fa210c6e538bc9154-removebg-preview.png/revision/latest?cb=20240114183222" alt="Plasma" width="500" height="333">
 <p>But they pull out a gun, uttering the iconic opening line from Fallout: New Vegas, pointing it at their "friend".
 <h2>"Bazinga!"</h2> they say, gun in hand. <font color="yellow">The enemy is utterly confused - so much so that it is still and unmoving.
