--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <h1> Too Much Catnip </h1>
-    <img src="https://cdn.britannica.com/70/234870-050-D4D024BB/Orange-colored-cat-yawns-displaying-teeth.jpg" alt="ginger1" width="500" height="333">
+
+    <nav>
+        <ul>
+            <a href="./">
+                <li>Home</li>
+            </a>
+
+            <a href="./about">
+                <li>About</li>
+            </a>
+        </ul>
+    </nav>
+
+    <img class="spin-image" src="https://cdn.britannica.com/70/234870-050-D4D024BB/Orange-colored-cat-yawns-displaying-teeth.jpg" alt="ginger1" width="500" height="333">
     <div id="first-div">
         <p><font color="orange">There was a Ginger Cat </font> who, despite all odds, was serving as gunner on a spaceship headed to Mars.
     An alien is on the horizon, but the gunner knowns what needs to be done...
@@ -25,7 +38,11 @@ Until it hits a wall behind it, causing it to topple over. He crys for his dog f
 <img src="https://i.makeagif.com/media/4-21-2021/8rziqE.gif" alt="Computer man" style="width:480px;height:480px;"><p>But they pull out a gun, uttering the iconic opening line from Fallout: New Vegas, pointing it at their "friend".
 <h2>"Bazinga!"</h2> they say, gun in hand. <font color="yellow">The enemy is utterly confused - so much so that it is still and unmoving.
 As confused as the enemy is, the narrator and everyone else is even more confused.</font>
+
+<img id="animated-img" src="https://img.freepik.com/premium-photo/cat-space-suit-looks-out-spaceship_934871-114.jpg"/>
 </div>
 </p>
+
+
 </body>
 </html>
