--- a/about/index.html
+++ b/about/index.html
@@ -10,11 +10,11 @@
 
     <nav>
         <ul>
-            <a href="./">
+            <a href="../">
                 <li>Home</li>
             </a>
 
-            <a href="./about">
+            <a href="./">
                 <li>About</li>
             </a>
         </ul>
