--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="../style.css" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<h1> Too Much Catnip </h1>
 <body>
-    <p> Test </p>
 
     <nav>
         <ul>
@@ -19,5 +21,7 @@
             </a>
         </ul>
     </nav>
+
+    <p> Made as a uni learning experience </p>
 </body>
 </html>
