--- a/about/about.html
+++ b/about/about.html
@@ -6,17 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <h1> Too Much Catnip </h1>
 <body>
 
     <nav>
         <ul>
-            <a href="../">
+            <a href="./index.html">
                 <li>Home</li>
             </a>
 
-            <a href="./">
+            <a href="../">
                 <li>About</li>
             </a>
         </ul>
